@@ -1,3 +1,9 @@
+Wed Feb 25 14:22:57 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+
+	* lib/mkmf.rb (try_cppflags, try_cflags, try_ldflags): get rid of
+	  interference by modifying global variables in have_devel? method.
+	  [ruby-core:67962] [Bug #10821]
+
 Wed Feb 25 14:19:35 2015  SHIBATA Hiroshi  <shibata.hiroshi@gmail.com>
 
 	* thread.c: Improve documentation for Thread#value
